objects/LLC_BI__Loan__c.object
<CustomObject>
    <fields>
        <fullName>CF_Loan_Purpose__c</fullName>
        <description>To capture Loan Purpose on Loan object</description>
        <label>Loan Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>36</fullName>
                    <label>AG Reimbursement</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Building Improvements</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>Construction of Commercial Property for Resale</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Construction of Dwelling for Resale/Rental</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>Construction of Residential Property for Resale</label>
                </value>
                <value>
                    <fullName>69</fullName>
                    <label>Consumer Loan-All Others</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Contract Services</label>
                </value>
                <value>
                    <fullName>38</fullName>
                    <label>Crop Production</label>
                </value>
                <value>
                    <fullName>58</fullName>
                    <label>Education</label>
                </value>
                <value>
                    <fullName>39</fullName>
                    <label>AG General Operating</label>
                </value>
                <value>
                    <fullName>71</fullName>
                    <label>Home Equity Line of Credit</label>
                </value>
                <value>
                    <fullName>57</fullName>
                    <label>Home Improvement</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>AG Improve Real Estate</label>
                </value>
                <value>
                    <fullName>48</fullName>
                    <label>Mo-Bucks&apos;86</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Negotiable Instruments</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>New Commercial Building Construction</label>
                </value>
                <value>
                    <fullName>70</fullName>
                    <label>New Construction Residence</label>
                </value>
                <value>
                    <fullName>59</fullName>
                    <label>Personal</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>Project Cost Reimbursement</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Purchase Business Real Estate</label>
                </value>
                <value>
                    <fullName>34</fullName>
                    <label>Purchase Cattle</label>
                </value>
                <value>
                    <fullName>33</fullName>
                    <label>Purchase Equipment</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Purchase Existing Business</label>
                </value>
                <value>
                    <fullName>35</fullName>
                    <label>Purchase Hogs</label>
                </value>
                <value>
                    <fullName>47</fullName>
                    <label>Purchase Horses</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Purchase Income Producing Real Estate</label>
                </value>
                <value>
                    <fullName>53</fullName>
                    <label>Purchase Lawn Equipment</label>
                </value>
                <value>
                    <fullName>32</fullName>
                    <label>Purchase Machinery</label>
                </value>
                <value>
                    <fullName>56</fullName>
                    <label>Purchase Mobile Home</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>Purchase New Vehicle</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Loan_UI_Visibility__c</fullName>
        <formula>IF( OR($Profile.Name = &quot;PWC/nCino&quot;,
$Profile.Name =&quot;System Administrator&quot;,
CF_Change_Memo_Unlock_UI__c = True
),
&quot;PreApprovalEditable&quot;,

IF(
OR($Profile.Name =&quot;TBOM Read Only&quot;,
ISPICKVAL(LLC_BI__Stage__c, &quot;Credit Decisioning&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Booked&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Complete&quot;)),
&quot;AllLocked&quot;,

IF(
OR(ISPICKVAL(LLC_BI__Stage__c, &quot;Pre-Closing Due Diligence&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Doc Prep &amp; Review&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Closing&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Booking / Funding&quot;),
ISPICKVAL(CF_Change_Memo_Loan_UI_Status__c, &quot;Changes Complete/UI Locked&quot;)
),
&quot;PostApprovalLocked&quot;,

IF( OR(
ISPICKVAL(LLC_BI__Stage__c, &quot;Qualification / Proposal&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Application Processing&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Credit Underwriting&quot;)),
&quot;PreApprovalEditable&quot;, &quot;Not met any Criteria&quot;)
)))</formula>
        <label>Loan UI Visibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_New_Policy_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is marked true if any new policy exception is created in renewal/mod loans</description>
        <label>New Policy Exception?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_No_New_Financial_Info_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ability to bypass risk rating requirement when no new financial information is needed and exposure is less than $250,000 on renewals/modifications</description>
        <inlineHelpText>By selecting this checkbox, you agree this deal is eligible to bypass a risk rating review and approve via fast-track approval.</inlineHelpText>
        <label>No New Financial Info Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Non_Crop_Coverage_Ratio__c</fullName>
        <description>This field is used to calculate Non-Crop Coverage Ratio.</description>
        <formula>(LLC_BI__Total_Collateral_Value__c - LLC_BI__Loan_Collateral_Aggregate__r.CF_Crops_Livestock_Market_Value__c) /  (CF_Total_Current_Balance__c + CF_Total_Non_TBOM_Superior_Lien_Amount__c)</formula>
        <label>Non Crop &amp; Livestock Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CF_On_Hold_Days__c</fullName>
        <formula>IF( ( ISPICKVAL( LLC_BI__Status__c , &apos;On Hold&apos;) )  &amp;&amp; ( NOT( ISNULL(CF_Status_On_Hold_Date__c) ) ) ,  ( TODAY() - CF_Status_On_Hold_Date__c ) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Hold Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity from which this loan was created/converted</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Original_Approved_Loan_Amount__c</fullName>
        <description>It populates with the loan amount when it is approved in Stage 4: Credit Decisioning and is not editable</description>
        <label>Original Approved Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Other_Escrow_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Escrow Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_PP_Approver_Approval_Queue__c</fullName>
        <description>Used in Loan Approval Process.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PP Approver Approval Queue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_PP_Approver_Queue__c</fullName>
        <formula>TEXT(LLC_BI__Product_Package__r.CF_Approver_Queue__c)</formula>
        <label>PP ApproverQueue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Participation_Amount__c</fullName>
        <description>Used to SUM the participation amount of participation records tied to the loan</description>
        <label>Participation Amount</label>
        <summarizedField>LLC_BI__Participation__c.LLC_BI__Participation_Amount__c</summarizedField>
        <summaryForeignKey>LLC_BI__Participation__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CF_Payment_Frequency__c</fullName>
        <description>SBA Form 1920</description>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Semi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                    <isActive>false</isActive>
                    <label>Annually</label>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                    <isActive>false</isActive>
                    <label>Semi-Annually</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Possessory_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. If enabled, it indicates that a loan has possessory collateral type. If disabled, a loan does not have Possessory Collateral. By default, this value is disabled.</description>
        <label>Possessory Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Post_Closing_Review_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Post Closing Review Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Post_Closing_Review_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Closing Review Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Post_Closing_Review_Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Post Closing Review Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Print_Coupon_Book__c</fullName>
        <label>Print Coupon Book</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_PriorStageValue__c</fullName>
        <description>This field holds the Prior stage value of the loan</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PriorStageValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Proposed_Gross_LTV__c</fullName>
        <description>This field is used to calculate Proposed Gross LTV</description>
        <formula>(CF_Total_Current_Balance__c +  LLC_BI__Loan_Collateral_Aggregate__r.LLC_BI__Total_Superior_Lien_Amount__c)/  LLC_BI__Total_Collateral_Value__c</formula>
        <label>Proposed Gross LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CF_Proposed_Net_LTV__c</fullName>
        <description>This field is used to calculate Proposed Net LTV</description>
        <formula>(CF_Total_Current_Balance__c + LLC_BI__Loan_Collateral_Aggregate__r.LLC_BI__Total_Superior_Lien_Amount__c)/  LLC_BI__Current_Total_Lendable_Value__c</formula>
        <label>Proposed Net LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CF_Reason_for_Credit_Action__c</fullName>
        <label>Reason for Credit Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rate Modification</fullName>
                </value>
                <value>
                    <fullName>Payment Extension</fullName>
                </value>
                <value>
                    <fullName>Rate Change</fullName>
                </value>
                <value>
                    <fullName>Collateral Swap</fullName>
                </value>
                <value>
                    <fullName>Guarantor Change</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_RegB_Email_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RegB_Email_Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_RegB_Open_Days__c</fullName>
        <formula>IF(ISBLANK(LLC_BI__Credit_Approval_Date__c) , Today() - CF_Application_Completed_Date__c -  CF_Reg_B_Hold_Time__c , LLC_BI__Credit_Approval_Date__c - CF_Application_Completed_Date__c -  CF_Reg_B_Hold_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RegB Open Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Reg_B_Hold_Time__c</fullName>
        <description>This field is used to hold the cumulative days when the loan is in hold status in the pre-approval stages</description>
        <formula>CF_SLA__r.CF_HoldDays_in_Qualification_Proposal__c +  CF_SLA__r.CF_Hold_Days_in_Application_Processing__c +  CF_SLA__r.CF_Hold_Days_in_Credit_Underwriting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reg B Hold Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Reg_W_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates this transactions meets the criteria for Reg W Reportability.</inlineHelpText>
        <label>Reg W</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Region__c</fullName>
        <description>It will be updated with the branch region.</description>
        <formula>TEXT( LLC_BI__Account__r.LLC_BI__Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Risk_Grade_Downgraded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will be checked when the latest risk rating has highest risk grade than loan&apos;s risk grade value</description>
        <label>Risk Grade Downgraded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Role_Specific_UI_Visibility__c</fullName>
        <formula>IF( OR($Profile.Name =&quot;PWC/nCino&quot;, 
$Profile.Name =&quot;System Administrator&quot;),
&quot;True&quot;,
IF(AND(OR($Profile.Name=&quot;Credit &amp; Processor&quot;,
$Profile.Name=&quot;Relationship Manager &amp; Credit&quot;),
OR(ISPICKVAL(LLC_BI__Stage__c, &quot;Pre-Closing Due Diligence&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Doc Prep &amp; Review&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Closing&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Booking / Funding&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Booked&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Complete&quot;))),
&quot;True&quot;,&quot;False&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Specific UI Visibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_SLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLA</label>
        <referenceTo>SLA__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Send_Billing_Notice__c</fullName>
        <label>Send Billing Notice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Status_On_Hold_Date__c</fullName>
        <description>Holds the date when Status is changed to On Hold</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status On Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Titled_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. If enabled, it indicates that a loan has Titled Collateral Type. If disabled, a loan is does not have Titled Collateral Type. By default, this value is disabled.</description>
        <label>Titled Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Today_s_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today&apos;s Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Total_Aggregate_Exposure_Check_On_PP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true when PP&apos;s Total Aggregate Exposure is &gt; 250000</description>
        <label>Total Aggregate Exposure Check On PP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Total_Current_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field will sum the current balance of the loan and any proposed and booked loans that are associated with the collateral.</description>
        <label>Total Loans Secured by Collateral Pkg.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_Facilities_Amount__c</fullName>
        <label>Total Facilities Amount</label>
        <summarizedField>LLC_BI__Participation__c.LLC_BI__Participation_Amount__c</summarizedField>
        <summaryForeignKey>LLC_BI__Participation__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CF_Total_Non_TBOM_Superior_Lien_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field will automatically populated with the total amount of all liens with a higher position.</description>
        <label>Total Non-TBOM Superior Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Treasury__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used on Assign Team Member sub-route on Loan Team.</description>
        <label>Treasury</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_UCC_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated by system. If enabled, it indicates that a loan is for UCC. If disabled, a loan is not for UCC. By default, this value is disabled.</description>
        <label>UCC Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Upload_reminder_sent_date__c</fullName>
        <description>It will store the upload reminder email sent date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Upload reminder sent date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collateral_Code__c</fullName>
        <description>Collateral Code for Loan Object</description>
        <label>Collateral Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001	Conversion Error</fullName>
                </value>
                <value>
                    <fullName>100	Blanket Business</fullName>
                </value>
                <value>
                    <fullName>111	Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>122	Notes Receivable</fullName>
                </value>
                <value>
                    <fullName>123	Stocks, Bonds &amp; Investments</fullName>
                </value>
                <value>
                    <fullName>124	Life Insurance</fullName>
                </value>
                <value>
                    <fullName>125	Stocks Publicly Traded</fullName>
                </value>
                <value>
                    <fullName>126	Stocks Unlisted</fullName>
                </value>
                <value>
                    <fullName>127	Bonds</fullName>
                </value>
                <value>
                    <fullName>128	Bonds</fullName>
                </value>
                <value>
                    <fullName>129	Annuities</fullName>
                </value>
                <value>
                    <fullName>130	Mutual Funds</fullName>
                </value>
                <value>
                    <fullName>131	Treasuries</fullName>
                </value>
                <value>
                    <fullName>132	Other Investments</fullName>
                </value>
                <value>
                    <fullName>133	Inventory</fullName>
                </value>
                <value>
                    <fullName>134	Reliable Community Bancshares, Inc. Stock</fullName>
                </value>
                <value>
                    <fullName>135	Other Bank Stock</fullName>
                </value>
                <value>
                    <fullName>136	Certificate of Deposit</fullName>
                </value>
                <value>
                    <fullName>137	Savings Account</fullName>
                </value>
                <value>
                    <fullName>138	Checking/Money Market Account</fullName>
                </value>
                <value>
                    <fullName>139	Other Financial Instrument</fullName>
                </value>
                <value>
                    <fullName>140	Inventory-Floor Plan</fullName>
                </value>
                <value>
                    <fullName>144	Improved Business Real Estate</fullName>
                </value>
                <value>
                    <fullName>155	Unimproved Business Real Estate</fullName>
                </value>
                <value>
                    <fullName>156	Unimproved Business Real Estate &amp; Improved Real Estate</fullName>
                </value>
                <value>
                    <fullName>166	1-4 Family Rental Real Estate</fullName>
                </value>
                <value>
                    <fullName>167	Real Estate &amp; CD, Savings or Investments</fullName>
                </value>
                <value>
                    <fullName>176	Business Machinery and Equipment</fullName>
                </value>
                <value>
                    <fullName>177	Machinery &amp; Equipment</fullName>
                </value>
                <value>
                    <fullName>178	Office Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountMemos__c</fullName>
        <description>Used to count the number of memos on a loan.</description>
        <inlineHelpText>Used to count the number of memos on a loan.</inlineHelpText>
        <label>CountMemos</label>
        <summaryForeignKey>LLC_BI__Credit_Memo_Modifcation__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit_Life_Information__c</fullName>
        <description>Field to capture specifics on Credit Life Insurance</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Include who the Credit Life will be issued on and what kind of credit life will be taken</inlineHelpText>
        <label>Credit Life Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Life__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if Borrower has requested Credit Life Insurance</description>
        <label>Credit Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entity_Involvement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to Entity Involvement</description>
        <label>Entity Involvement</label>
        <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Farm_Product_Notification_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if Farm Product notification is needed for loan.</description>
        <label>Farm Product Notification Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Farm_Product_Notification__c</fullName>
        <description>Farm Product Notification -  Req by Jeff Beck (06/30/22)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Farm Product Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flood_Insurance_Exp_Date__c</fullName>
        <description>Flood Insurance Exp Date -  Req by Jeff Beck (06/30/22)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Flood Insurance Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HMDA__c</fullName>
        <description>Is loan HMDA reportable</description>
        <label>HMDA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HVCRE_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HVCRE Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Borrower_an_Individual__c</fullName>
        <formula>ISPICKVAL(LLC_BI__Account__r.CF_Type__c, &quot;Individual&quot;)&amp;&amp;
ISPICKVAL(Entity_Involvement__r.LLC_BI__Borrower_Type__c,&quot;Borrower&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Borrower an Individual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JHJX__AccountOfficer__c</fullName>
        <formula>Owner:User.LLC_BI__Officer_Number__c</formula>
        <label>Loan Primary Relationship Officer Number</label>
        <type>Text</type>
    </fields>
</CustomObject>